<resources>
    <string name="app_name">STUDY BAR</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">Me</string>
    <string name="title_category">Category</string>
    <string name="title_discussion">Discussion</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search topics</string>
    <string name="settings">Settings</string>
    <string name="personal_suggestion">Based on your interest</string>
    <string name="expand">expand</string>
    <string name="notification_avatar">The avatar of this notification.</string>
    <string name="num_of_discussions">Discussions:</string>
    <string name="top_level">Top</string>

    <!--学科名-->
    <string name="Philosophy">Philosophy</string>
    <string name="Economics">Economics</string>
    <string name="Jurisprudence">Jurisprudence</string>
    <string name="Pedagogy">Pedagogy</string>
    <string name="Literature">Literature</string>
    <string name="History">History</string>
    <string name="formalScience">Formal science</string>
    <string name="Engineering">Engineering</string>
    <string name="Agronomy">Agronomy</string>
    <string name="Medicine">Medicine</string>
    <string name="militaryScience">Military science</string>
    <string name="Management">Management</string>
    <string name="artTheory">Art Theory</string>

    <string name="discussion_author_pre">u/</string>
    <string name="my_books">My Books</string>
    <string name="my_discussions">My Discussions</string>
    <string name="for_user_more_info">more user info.</string>
    <string name="num_of_likes">Likes: </string>
    <string name="blank" />
    <string name="follow">Follow</string>
    <string name="action_add">Add</string>
    <string name="add_book">Add A Book</string>
    <string name="plz_input_book_name">Please input book title here.</string>
    <string name="plz_input_book_author">Please input the author of this book.</string>
    <string name="input_book_name">Book Title</string>
    <string name="input_book_author">Author of this book</string>
    <string name="input_book_publisher">Publisher of this book</string>
    <string name="Add">ADD</string>
    <string name="Cancel">CANCEL</string>
    <string name="select_book_category">Select Category</string>
    <string name="plz_input_full_info">Input info can\'t be null</string>
    <string name="correct">Correct mistakes</string>
    <string name="report">Report...</string>
    <string name="login_user_email">Email Address</string>
    <string name="login_user_password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign up</string>
    <string name="followed">Followed</string>
    <string name="unfollowed">Unfollowed</string>
    <string name="order_hot">HOT</string>
    <string name="order_alphabet">ALPHABET</string>
    <string name="order_new">NEW</string>
    <string name="order_rising">RISING</string>
    <string name="order_by">Order By</string>
    <string name="Confirm">Confirm</string>
    <string name="be_nice">Be Nice.</string>
    <string name="plz_input_title">Discussion Topic</string>
    <string name="report_confirmation">Are you sure to report this book?</string>
    <string name="report_thanks">Thank you.</string>
    <string name="pick_mistake_item">Pick the wrong part</string>
    <string name="mistake_book_cover">Book Cover</string>
    <string name="mistake_book_title">Book Title</string>
    <string name="mistake_book_author">Author</string>
    <string name="mistake_book_publisher">Publisher</string>
    <string name="mistake_book_category">Category</string>
    <string name="mistakes_categories">Categories</string>
    <string name="ok">OK</string>
    <string name="plz_correct_cover">Please upload a correct book cover.</string>
    <string name="plz_correct_title">Please input correct title.</string>
    <string name="plz_correct_author">Please input the correct author.</string>
    <string name="plz_correct_publisher">Please input correct publisher.</string>
    <string name="plz_correct_category">Please select correct category.</string>
    <string name="correct_book_info">Correct Book Info</string>
    <string name="sign_up_phone_number">Phone Number</string>
    <string name="sign_up_nickname">Nickname</string>
    <string name="action_sign_up_short">Sign Up</string>
    <string name="verification_code">Verification code</string>
    <string name="get">Get</string>
    <string name="your_interest">Your Interest</string>
    <string name="i_have_read">I have read the </string>
    <string name="agreement">Agreement</string>
    <string name="sign_up_select_avatar">Select your avatar</string>
    <string name="select_gender_identity">Gender identity(can be null)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="agender">Agender</string>
    <string name="sign_up_user_name">Name</string>
    <string name="sign_up_profession">Profession</string>
    <string name="sign_up_info_not_null">Email, Name, Password, Verification Code can not be null! Or you haven\'t agree the agreement.</string>
    <string name="login_failed">Login failed, please check your password.</string>
    <string name="email_null">Please input email address.</string>
    <string name="password_null">Please input password.</string>
    <string name="logout">Log out</string>
    <string name="summary_logout">Log out</string>
    <string name="plz_login_first">Please login first.</string>
    <string name="click_get_code">Please get Verification code first!</string>
    <string name="plz_input_email">Please input email address first!</string>
    <string name="no_internet">No Internet Connection.</string>
    <string name="no_books">No Books Found.</string>
    <string name="avatar">Avatar</string>
    <string name="no_discussion">No Discussions Found.</string>
    <string name="notification_message">%1$s replied your topic: %2$s</string>
    <string name="no_notifications">No Notification Found.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_edit_summary">Change your avatar, nickname, profession and more</string>
    <string name="bio">Bio</string>
    <string name="nickname_not_null">Nickname can\'t be null.</string>
    <string name="preview_of_content">Content preview</string>
    <string name="quote_content"><![CDATA[<fieldset style=\\\"font-size: 12px;border: 1px solid #CCC;word-break: break-word;word-wrap: break-word;overflow-x: hidden;margin: 0 0 5px 0;padding: 0 5px 5px;\\\"><legend style=\\\"font-weight:bold;font-size:14px;\\\">引自 %1$s 楼 %2$s 的回复</legend>%3$s </fieldset>%4$s]]></string>
    <string name="change_password">Change Password</string>
    <string name="change_your_password">Change your password</string>
    <string name="darkmode">Dark Mode</string>
    <string name="toggle_darkmode">Toggle Dark Mode</string>
    <string name="always_off">Always OFF</string>
    <string name="always_on">Always ON</string>
    <string name="follow_system">Follow system</string>
    <string name="when_battery_saver_on">Battery saver only</string>
    <string name="based_on_time">Base on time. (Switch to darkmode on night.)</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="check_your_intput">Check your input</string>
    <string name="plz_login_again">Please login again</string>
    <string name="confirm_password">Confirm password</string>
    <string name="check_your_password">Wrong password, check it again.</string>
    <string name="forget_password"><u>Forget Password</u></string>
    <string name="retrieve_password">Retrieve password</string>
    <string name="wait_for_send">Please wait for verification to send.</string>

    <string-array name="category_array">
        <item>@string/select_book_category</item>
        <item>@string/Philosophy</item>
        <item>@string/Economics</item>
        <item>@string/Jurisprudence</item>
        <item>@string/Pedagogy</item>
        <item>@string/Literature</item>
        <item>@string/History</item>
        <item>@string/formalScience</item>
        <item>@string/Engineering</item>
        <item>@string/Medicine</item>
        <item>@string/Management</item>
    </string-array>

    <string-array name="mistakes_list">
        <item>@string/mistake_book_cover</item>
        <item>@string/mistake_book_title</item>
        <item>@string/mistake_book_category</item>
    </string-array>

    <string-array name="mistake_category_array">
        <item>@string/Philosophy</item>
        <item>@string/Economics</item>
        <item>@string/Jurisprudence</item>
        <item>@string/Pedagogy</item>
        <item>@string/Literature</item>
        <item>@string/History</item>
        <item>@string/formalScience</item>
        <item>@string/Engineering</item>
        <item>@string/Medicine</item>
        <item>@string/Management</item>
    </string-array>

    <string-array name="gender_identity">
        <item>@string/select_gender_identity</item>
        <item>@string/male</item>
        <item>@string/female</item>
        <item>@string/agender</item>
    </string-array>

    <string-array name="dark_mode_setting">
        <item>@string/always_off</item>
        <item>@string/always_on</item>
        <item>@string/follow_system</item>
        <item>@string/when_battery_saver_on</item>
    </string-array>

</resources>
