<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RadioGroup
        android:id="@+id/correction_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <RadioButton
            android:id="@+id/correction_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mistake_book_cover" />
        <RadioButton
            android:id="@+id/correction_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mistake_book_title" />
        <RadioButton
            android:id="@+id/correction_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mistake_book_author" />
        <RadioButton
            android:id="@+id/correction_publisher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mistake_book_publisher" />
        <RadioButton
            android:id="@+id/correction_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/mistake_book_category" />

    </RadioGroup>

    <Button
        android:id="@+id/correction_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/correction_radio_group"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/correction_cancel"/>

    <Button
        android:id="@+id/correction_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@id/correction_radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/correction_confirm"/>

</android.support.constraint.ConstraintLayout>