<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/add_book_cover"
            android:layout_width="@dimen/list_book_show_width"
            android:layout_height="@dimen/list_book_show_height"
            android:src="@drawable/ic_action_add_large"
            android:layout_alignParentStart="true"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_book_name_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_toEndOf="@id/add_book_cover"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_book_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_book_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_book_author_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_toEndOf="@id/add_book_cover"
            android:layout_below="@id/add_book_name_layout"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_book_author" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_toEndOf="@id/add_book_cover"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_below="@id/add_book_author_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_book_press"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_book_publisher" />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>

    <Spinner
        android:id="@+id/add_book_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/Cancel"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:background="?selectableItemBackgroundBorderless"
            android:text="@string/Add"/>

    </LinearLayout>

</LinearLayout>