<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_book_show_height">

    <ImageView
        android:id="@+id/book_search_cover"
        android:layout_width="@dimen/list_book_show_width"
        android:layout_height="@dimen/list_book_show_height"
        android:layout_marginStart="16dp"
        tools:src="@drawable/test"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/book_search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:text="习近平谈治国理政" />

        <LinearLayout
            android:id="@+id/num_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/book_search_title">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num_of_discussions"/>

            <TextView
                android:id="@+id/search_num_of_discuss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="64"/>
        </LinearLayout>

        <ToggleButton
            android:id="@+id/book_follow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_follow_background"
            android:textOff="@string/follow"
            android:textOn="@string/followed"
            android:layout_margin="8dp"
            android:focusable="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="?android:textAppearanceSmall"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>